--- a/guide/elements/tabletitle.html
+++ b/guide/elements/tabletitle.html
@@ -8,11 +8,11 @@
                 <div class="left-group">
                     <h2 class="main-title">메인 타이틀</h2>
                     <span class="h-ico lg tip ml-8"
-                                title="툴팁 메세지 입니다."
-                                data-role="tooltip"
-                                data-auto-hide="false"
-                                data-position="left bottom"
-                            >팁</span>
+                        title="툴팁 메세지 입니다."
+                        data-role="tooltip"
+                        data-auto-hide="false"
+                        data-position="left bottom"
+                    >팁</span>
                     <button type="button" class="h-ico sm bookmark ml-4 funcToggle">북마크</button>
                 </div>
                 <div class="right-group">
@@ -29,22 +29,25 @@
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
-&lt;div class="title-box lg">
-    &lt;div class="left-group">
-        &lt;h2 class="main-title">메인 타이틀&lt;/h2>
-        &lt;button type="button" class="h-ico lg tip ml-8">팁&lt;/button>
-        &lt;button type="button" class="h-ico sm bookmark ml-4 funcToggle">북마크&lt;/button>
-    &lt;/div>
-    &lt;div class="right-group">
-        &lt;nav id="breadcrumb"
-            data-role="breadcrumb"
-            data-editable=false,
-            data-navigational=true,
-            data-items='[
-        { type:"rootitem", href: "", text: "서비스품질", showText: true },
-        { type:"item", href: "", text: "상담정보 관리", showText: true}
-        ]'/>
-    &lt;/div>
+&lt;div class="left-group">
+    &lt;h2 class="main-title">메인 타이틀&lt;/h2>
+    &lt;span class="h-ico lg tip ml-8"
+        title="툴팁 메세지 입니다."
+        data-role="tooltip"
+        data-auto-hide="false"
+        data-position="left bottom"
+    >팁&lt;/span>
+    &lt;button type="button" class="h-ico sm bookmark ml-4 funcToggle">북마크&lt;/button>
+&lt;/div>
+&lt;div class="right-group">
+    &lt;nav id="breadcrumb"
+        data-role="breadcrumb"
+        data-editable=false,
+        data-navigational=true,
+        data-items='[
+    { type:"rootitem", href: "", text: "서비스품질", showText: true },
+    { type:"item", href: "", text: "상담정보 관리", showText: true}
+    ]'/>
 &lt;/div>
             </code></pre>
         </div>
