--- a/guide/elements_bc.html
+++ b/guide/elements_bc.html
@@ -56,6 +56,7 @@
 
     <!-- Load Scripts -->
     <script src="../resources/lib/kendo/js/jquery.min.js"></script>
+    <script src="https://kendo.cdn.telerik.com/2014.1.528/js/cultures/kendo.culture.ko-KR.min.js"></script>
     <script src="../resources/lib/kendo/js/kendo.all.min.js"></script>
     <!-- Guide Script -->
     <script type="text/javascript" src="./highlight/highlight.pack.js"></script>
