--- a/pages/SA/SA010101.html
+++ b/pages/SA/SA010101.html
@@ -64,24 +64,37 @@
                             <button type="submit" data-role="button" class="search" data-icon="search-blue"><span>검색</span></button>
                         </div>
                         <div class="table-set">
-                            <div class="title-box sm">
-                                <div class="left-group">
-                                    <span class="amount-set">
-                                        <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
-                                        <span class="amount">26</span><span class="unit">건</span>
-                                    </span>
-                                </div>
-                                <div class="right-group">
-                                    <div class="btn-box">
-                                        <button data-role="button">등록</button>
-                                        <button data-role="button" class="green">엑셀</button>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="table-content grid">
-                                <div data-role="grid" data-sortable="true" data-editable="false" data-columns='[
-                                    { "field": "N", "width": 50 },
-                                    { "field": "NO", "width": 50 },
+                                <script type="text/x-kendo-template" class="toolbarTemplate">
+                                    <div class="title-box sm">
+                                        <div class="left-group">
+                                            <span class="amount-set">
+                                                <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
+                                                <span class="amount">26</span><span class="unit">건</span>
+                                            </span>
+                                        </div>
+                                        <div class="right-group">
+                                            <div class="btn-box">
+                                                <button role="button" class="k-button k-grid-add"><span>등록</span></button>
+                                                <button role="button" class="k-button green"><span>엑셀</span></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </script>
+                                <script type="text/x-kendo-template" class="checkboxTemplate">
+                                    <div class="h-checkbox no-label">
+                                        <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+                                        <label for="checkbox-nolabel"></label> 
+                                    </div>
+                                </script>
+                                <div data-role="grid" 
+                                data-sortable="true" 
+                                data-editable="true" 
+                                data-bind="source: gridSource"
+                                data-toolbar="#=toolbarTemplate()#"
+                                data-columns='[
+                                    { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 60, "template": "#=checkboxTemplate()#" },
+                                    { "title": "NO.", "width": 50 },
                                     { "field": "상품코드", "width": 90 },
                                     { "field": "상품명", "width": 170 },
                                     { "field": "어플리케이션", "width": 146 },
@@ -91,7 +104,7 @@
                                     { "field": "사용가능업종", "width": 140 },
                                     { "field": "등록일", "width": 120 },
                                     { "field": "종료일", "width": 120 }
-                                ]' data-bind="source: gridSource">
+                                ]'>
                                 </div>
                                 <div class="table-bottom">
                                     <button data-role="button" class="gray-border">삭제</button>
@@ -112,19 +125,28 @@
     <script src="../../resources/lib/kendo/js/kendo.all.min.js"></script>
     <script src="../../resources/js/common.js"></script>
     <script>
-            var viewModel = kendo.observable({
-                gridSource: [
-                    { "N":"ch", "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
-                    { "N":"ch", "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
-                    { "N":"ch", "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" }
-                ],
-                displayGridSource: function() {
-                    return stringify(this.get("gridSource").toJSON());
-                },
-            });
-            kendo.bind($(".table-content.grid"), viewModel);
-            kendo.bind($(".wrap"), viewModel);
-    </script>
+        var viewModel = kendo.observable({
+            gridSource: [
+                { "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+                { "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+                { "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" }
+            ],
+            displayGridSource: function() {
+                return stringify(this.get("gridSource").toJSON());
+            },
+        });
+        kendo.bind($(".wrap"), viewModel);
+        function toolbarTemplate() {
+            var template = kendo.template($('.toolbarTemplate').html());
+            var result = template({});
+            return result
+        }
+        function checkboxTemplate() {
+            var template = kendo.template($('.checkboxTemplate').html());
+            var result = template({});
+            return result
+        }
+</script>
 </body>
 
 </html>
