--- a/guide/list.html
+++ b/guide/list.html
@@ -109,9 +109,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-09</td>
                     <td class="ex_end">08-09</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-09</td>
+                    <td class="date_end">08-09</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -122,9 +122,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-09</td>
                     <td class="ex_end">08-09</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-09</td>
+                    <td class="date_end">08-09</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup</td>
                 </tr>
                 <tr class="">
@@ -135,9 +135,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-09</td>
                     <td class="ex_end">08-09</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-09</td>
+                    <td class="date_end">08-09</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup</td>
                 </tr>
                 <tr class="">
@@ -307,7 +307,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td></td>
+                    <td>popup</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -320,7 +320,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td></td>
+                    <td>popup</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
