--- a/pages/SA/SA010102_02.html
+++ b/pages/SA/SA010102_02.html
@@ -40,7 +40,7 @@
                             <tr>
                                 <th scope="row">구분<span class="required">*</span></th>
                                 <td>
-                                    <select data-role="dropdownlist" data-value="결제사" data-option-label="결제사">
+                                    <select data-role="dropdownlist" data-value="협력사" data-option-label="협력사">
                                         <option value="1">온라인</option>
                                         <option value="2">오프라인</option>
                                     </select>
@@ -74,7 +74,7 @@
                                     <div class="form-set">
                                         <input type="text" class="h-input" placeholder="" value="hyosung001"/>
                                         <!-- [D] 체크 됐을 때 .is-checked 추가 -->
-                                        <button type="button" data-role="button" data-icon="input-check" class="text"><span>ID체크</span></button>
+                                        <button type="button" data-role="button" data-icon="input-check" class="text input-check"><span>ID체크</span></button>
                                     </div>
                                 </td>
                                 <th scope="row">거래처코드<span class="required">*</span></th>
@@ -103,7 +103,14 @@
                                 <th scope="row">거래처명<span class="required">*</span></th>
                                 <td><input type="text" class="h-input" value="국민은행"/></td>
                                 <th scope="row">계약일</th>
-                                <td><input data-role="datepicker" placeholder="yyyymmdd"></td>
+                                <td>
+                                    <input data-role="datepicker" 
+                                    data-format="yyyy/MM/dd"
+                                    placeholder="yyyymmdd" 
+                                    data-culture="ko-KR"
+                                    data-footer="false"
+                                    class="datepicker" /> 
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">대표자명<span class="required">*</span></th>
