--- a/pages/SA/SA010301.html
+++ b/pages/SA/SA010301.html
@@ -91,7 +91,7 @@
                                     data-columns='[
                                     { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
                                     { "title": "NO.", "width": 50 },
-                                    { "field": "상품코드", "width": 90 },
+                                    { "field": "상품코드", "width": 90, "attributes" : {"class": "text-center"} },
                                     { "field": ""  }
                                     ]' 
                                     data-bind="source: gridSource"
